--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images/2.png" alt="Dog and Cat picture"></td>
+                <td><img src="2.png" alt="Dog and Cat picture"></td>
                 <td>
                     <h1>Jack & Alyssa</h1>
                     <p><em>Founder of <strong>Xinyu Consulting</strong> for System Design.</em></p>
